@@ -39,15 +39,18 @@
 
 # A boolean indicating whether active DA detection should be used. This is
 # useful when the DAs available are explicitly restricted to those obtained
-# from DHCP or the net.slp.DAAddresses property (Default is true)
+# from DHCP or the net.slp.DAAddresses property (Default is true). 
 ;net.slp.activeDADetection = false
 
-# A 16 bit positive integer giving the number of seconds between DA active
-# discovery queries.  Default is 900 seconds (15 minutes).  If the
-# property is set to zero, active discovery is turned off.  This is useful
-# when the DAs available are explicitly restricted to those obtained from 
-# DHCP or the net.slp.DAAddresses property.  
-;net.slp.DAActiveDiscoveryInterval = 0
+# The net.slp.DAActiveDiscoveryInterval property controls *periodic* 
+# transmission of active DA discovery SrvRqsts.  The default setting
+# of 1 which disables sending periodic active DA discovery SrvRqsts.  
+# However, even if net.slp.DAActiveDiscoveryInterval=1 OpenSLP agents will
+# send a send active DA request only upon initialization.  To disable all 
+# active DA detection you MUST net.slp.passiveDADetection = false. (you
+# may also set net.slp.DAActiveDiscoveryInterval=0)
+# simply set 
+;net.slp.DAActiveDiscoveryInterval = 1
 
 # A positive integer that is less than or equal to 255. (The default is  255)
 ;net.slp.multicastTTL = 255
